2007-08-30  Xavier Claessens  <xclaesse@gmail.com>

	* python/pyempathy/pyempathy.defs:
	* python/pyempathy/pyempathy.override:
	* python/pyempathygtk/pyempathygtk.defs: Updated for new API.
	* python/README: Explain how to update python binding.

	* libempathy-gtk/empathy-images.h:
	* libempathy-gtk/empathy-private-chat.c:
	* libempathy-gtk/empathy-main-window.c:
	* libempathy-gtk/empathy-status-icon.c:
	* libempathy-gtk/empathy-group-chat.c:
	* libempathy-gtk/empathy-ui-utils.c:
	* libempathy-gtk/empathy-contact-dialogs.c:
	* libempathy-gtk/empathy-contact-list-view.c:
	* libempathy-gtk/empathy-contact-list-view.h:
	* libempathy-gtk/empathy-contact-widget.c:
	* libempathy-gtk/empathy-contact-list-store.c:
	* libempathy-gtk/empathy-contact-list-store.h:
	* libempathy-gtk/empathy-chat-window.c: Updated to use new libempathy
	API.

	* libempathy/empathy-log-manager.c:
	* libempathy/empathy-contact.c:
	* libempathy/empathy-contact.h:
	* libempathy/empathy-tp-chat.c:
	* libempathy/empathy-contact-manager.c:
	* libempathy/empathy-contact-manager.h:
	* libempathy/empathy-avatar.c:
	* libempathy/empathy-avatar.h:
	* libempathy/empathy-tp-contact-list.c:
	* libempathy/empathy-tp-contact-list.h:
	* libempathy/empathy-tp-chatroom.c:
	* libempathy/empathy-contact-factory.c:
	* libempathy/empathy-contact-factory.h:
	* libempathy/empathy-contact-list.c:
	* libempathy/empathy-contact-list.h:
	* libempathy/empathy-tp-group.c:
	* libempathy/empathy-marshal.list:
	* libempathy/empathy-tp-group.h:
	* libempathy/Makefile.am:
	* configure.ac: Completely reworked ContactList API. Fixes bugs
	#471611,
	#467280,
	#459540,
	#462907.

	* doc/*: Updated.

2007-08-24  Xavier Claessens  <xclaesse@gmail.com>

	* python/pyempathy/Makefile.am:
	* python/pyempathygtk/Makefile.am:
	* configure.ac: Make use of AM_PATH_PYTHON to get python variables.
	Fixes bug #470642 (Daniel Gryniewicz).

2007-08-24  Xavier Claessens  <xclaesse@gmail.com>

	* configure.ac: Bump version to 0.13.